--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "openai": "^4.81.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
   },
